# QueryForge

./: .dockerignore  .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
examples/queryforge-demo/: Dockerfile  README.md  docker-compose.yml  pyproject.toml
examples/queryforge-demo/app/: __init__.py  db.py  main.py  models.py  schemas.py
examples/queryforge-demo/app/api/: __init__.py  users.py
examples/queryforge-demo/docker/initdb/: 00-schema.sql  01-seed.sql
queryforge/: __init__.py  audit.py  audit_storage.py  exceptions.py  fastapi.py  filters.py  pagination.py  policy.py  projection.py  query.py  repository.py  soft_delete.py  sorting.py  tenancy.py
tests/: conftest.py  models.py  test_audit.py  test_fastapi_dep.py  test_filters_sort.py  test_filterset_pydantic.py  test_join_include.py  test_policy_rbac.py  test_projection.py  test_query_pagination.py  test_repository.py  test_select_into.py  test_tenancy.py
tests/typing/: __init__.py  test_query_types.py
