[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "queryforge"
version = "0.1.0"
description = "Typed query and repository layer for SQLAlchemy 2.0 and FastAPI"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "QueryForge contributors" }]
keywords = ["sqlalchemy", "fastapi", "repository", "async", "pydantic"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Framework :: FastAPI",
  "Typing :: Typed",
]
dependencies = [
  "pydantic>=2.0",
  "sqlalchemy>=2.0",
  "typing_extensions>=4.8",
]

[project.optional-dependencies]
fastapi = ["fastapi>=0.100.0"]
dev = [
  "pytest>=7.0",
  "pytest-asyncio>=0.23",
  "aiosqlite>=0.19",
  "ruff>=0.1",
  "httpx>=0.27",
  "fastapi>=0.100.0",
]

[project.urls]
Homepage = "https://github.com/example/queryforge"

[tool.hatch.build.targets.sdist]
include = ["queryforge", "README.md", "LICENSE", "pyproject.toml"]

[tool.hatch.build.targets.wheel]
packages = ["queryforge"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["queryforge", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.lint.per-file-ignores]
"queryforge/fastapi.py" = ["B008"]
"tests/test_fastapi_dep.py" = ["B008"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "basic"
venvPath = "."
venv = ".venv"
