[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[project]
name = "queryforge-demo"
version = "0.1.0"
description = "Демо FastAPI + QueryForge + PostgreSQL"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "queryforge[fastapi] @ file:../..",
  "fastapi>=0.100.0",
  "uvicorn[standard]>=0.24",
  "sqlalchemy>=2.0",
  "asyncpg>=0.29",
  "pydantic>=2.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.hatch.build.targets.sdist]
include = ["app", "README.md", "pyproject.toml"]
