[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "queryforge-demo"
version = "0.1.0"
description = "FastAPI + QueryForge demo + PostgreSQL"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "QueryForge contributors" }]
dynamic = ["dependencies"]

[tool.poetry]
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
queryforge = { path = "../..", extras = ["fastapi"], develop = true }
fastapi = ">=0.100.0"
uvicorn = { version = ">=0.24", extras = ["standard"] }
sqlalchemy = ">=2.0"
asyncpg = ">=0.29"
pydantic = ">=2.0"
